--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569789-alternance-product-owner-f-h'>Groupe CANAL+ ALTERNANCE - Product Owner - F/H | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/yieldstreet/ef175b08-1e06-4a5d-8335-e02168a1f54a'>YieldStreet - Product Manager, Customer Acquisition</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -86,7 +90,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://infutor.applytojob.com/apply/DI0ZLUgBbp/Senior-Product-Manager-Consumer-Identities'>Senior Product Manager, Consumer Identities - Infutor Data Solutions - Career Page</a></h5> 
+<h5><a href='http://infutor.applytojob.com/apply/DI0ZLUgBbp/Senior-Product-Manager-Consumer-Identities'>Senior Product Manager, Consumer Identities - Infutor Data Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -138,7 +142,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/en/o/product-manager-internship-rotterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/en/o/product-manager-internship-rotterdam'>
       Product Manager Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -148,7 +152,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oEG79fwk&__jvst=Employee&__jvsd=sysSTfwv&__jvsc=Twitter&bid=n2EfpMwB'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oEG79fwk&__jvst=Employee&__jvsd=sysSTfwv&__jvsc=Twitter&bid=n2EfpMwB'>Liferay, Inc. Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light">Brazil</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -184,7 +188,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/product/group-product-manager-experiences-1739157/?gh_src=82a8057f1'>Group Product Manager, Experiences | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/product/group-product-manager-experiences-1739157/?gh_src=82a8057f1'>Group Product Manager, Experiences | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -208,11 +212,11 @@
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934913'>Job Application for Product Owner at Fuze</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934913'>Job Application for Product Owner at Fuze</a></h5> 
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/convoy/5ffc7978-ea1a-47db-bd4a-4c7c45f6c222'>Convoy - Principal Product Manager, Strategic Projects</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/convoy/5ffc7978-ea1a-47db-bd4a-4c7c45f6c222'>Convoy - Principal Product Manager, Strategic Projects</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -344,7 +348,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=olcsbfwU&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5zAoMwT'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=olcsbfwU&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5zAoMwT'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -362,7 +366,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://quaero.applytojob.com/apply/REgOkGgAGk/Associate-Product-Manager'>Associate Product Manager - Quaero - Career Page</a></h5> 
+<h5><a href='http://quaero.applytojob.com/apply/REgOkGgAGk/Associate-Product-Manager'>Associate Product Manager - Quaero - Career Page</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -438,7 +442,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://hire.withgoogle.com/public/jobs/ardoqcom/view/P_AAAAABkAAApMX6idgpuO17?utm_campaign=Recruitment&utm_content=104426567&utm_medium=social&utm_source=twitter&hss_channel=tw-1477476211'>Senior Product Designer job in Oslo, Norway at Ardoq</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/ardoqcom/view/P_AAAAABkAAApMX6idgpuO17?utm_campaign=Recruitment&utm_content=104426567&utm_medium=social&utm_source=twitter&hss_channel=tw-1477476211'>Senior Product Designer job in Oslo, Norway at Ardoq</a></h5> 
 <p><span class="badge badge-light">Oslo, Norway Oslo, Norway</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -452,10 +456,6 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <hr/>
 <h5><a href='https://jobs.jobvite.com/ipsy/job/ohlrbfwY'>Ipsy Careers - Product Manager, Member Growth</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
-<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
